# circuitpython-deploy

./: .crates-ignore  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PROJECT_SUMMARY.md  README.md  deny.toml  project.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dependencies.yml  release.yml
examples/: README.md
examples/basic-led-blink/: .cpdignore  README.md  code.py
examples/sensor-dashboard/: .cpdignore  README.md  code.py  config.py
examples/sensor-dashboard/lib/: display_manager.py  sensors.py
mock_board/: boot_out.txt  code.py  config.py  lib_1.py  lib_10.py  lib_11.py  lib_12.py  lib_13.py  lib_14.py  lib_15.py  lib_16.py  lib_17.py  lib_18.py  lib_19.py  lib_2.py  lib_20.py  lib_3.py  lib_4.py  lib_5.py  lib_6.py  lib_7.py  lib_8.py  lib_9.py  old_code.py
mock_board/lib/: display_utils.py  old_lib.py  sensors.py
mock_board2/: boot_out.txt  code.py
scripts/: release.sh  validate-workflows.sh
src/: board.rs  cli.rs  error.rs  file_ops.rs  ignore.rs  lib.rs  main.rs  sync.rs
test_project/: .cpdforce  .cpdignore  README.md  boot.py  code.py  dev_notes.txt  settings.toml  test_file.test.py
test_project/backups/: old_code.py
test_project/lib/: helper.py
test_project/lib/adafruit_display_text/: __init__.py
tests/: integration_test.rs
