[package]
name = "circuitpython-deploy"
version = "0.1.0"
edition = "2021"
description = "Fast, reliable CircuitPython project deployment tool"
license = "MIT"
repository = "https://github.com/yourusername/circuitpython-deploy"
homepage = "https://github.com/yourusername/circuitpython-deploy"
documentation = "https://github.com/yourusername/circuitpython-deploy#readme"
keywords = ["circuitpython", "deployment", "embedded", "microcontroller"]
categories = ["command-line-utilities", "embedded", "development-tools"]
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[[bin]]
name = "cpd"
path = "src/main.rs"

[[bin]]
name = "test_ignore"
path = "src/bin/test_ignore.rs"

[[bin]]
name = "test_multi_board"
path = "src/bin/test_multi_board.rs"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
ignore = "0.4.23"
indicatif = "0.17.11"
sysinfo = "0.35.2"
walkdir = "2.5.0"
anyhow = "1.0"
thiserror = "1.0"
filetime = "0.2"
tempfile = "3.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "handleapi", "winbase", "winnt"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
